--- a/WebContent/Style.css
+++ b/WebContent/Style.css
@@ -1,6 +1,4 @@
-
-
-*{
+* {
 	margin: 0;
 	padding: 0;
 }
@@ -20,15 +18,15 @@ a {
 	text-decoration: none;
 }
 
-.menu{
+.menu {
 	display: inline-block;
-	-webkit-border-radius: 20px;	
+	-webkit-border-radius: 20px;
 	background: #e3e3e3;
 	list-style: none;
 	border: 1px solid #b2b2b2;
-	background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, #c3c3c3),color-stop(1, #f5f5f5)); /* Saf4+, Chrome */
+	background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, #c3c3c3),
+		color-stop(1, #f5f5f5)); /* Saf4+, Chrome */
 	-webkit-box-shadow: #aaa 0px 4px 10px;
-
 }
 
 .title {
@@ -41,8 +39,8 @@ a {
 }
 
 .title a span {
-	display:block;
-	padding:10px 10px 10px 20px;
+	display: block;
+	padding: 10px 10px 10px 20px;
 	color: #000;
 }
 
@@ -54,30 +52,26 @@ a {
 	font-size: 14px;
 	background: #fff;
 	color: #464646;
-	overflow:hidden;
+	overflow: hidden;
 }
 
 .title ul li a:hover {
 	background: #bbc5cf;
 	color: #000;
-	
 }
 
-
 .title ul li a {
- 	-webkit-transition: all .5s ease-in-out;
- 	height: 0px;
+	-webkit-transition: all .5s ease-in-out;
+	height: 0px;
 	display: block;
- 	
- }
+}
 
-:target + ul li a {
+:target+ul li a {
 	height: 30px;
-	
 }
 
 #bottom p {
 	font-size: 10px;
-	padding:  10px 10px 10px 20px;
+	padding: 10px 10px 10px 20px;
 	border-top: 1px solid #fff;
 }
