--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="events-web-assignment4">
+    <wb-module deploy-name="events-web">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <dependent-module archiveName="events-business-assignment4.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/events-business-assignment4/events-business-assignment4">
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/resource/events-business/events-business">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <property name="context-root" value="events-web-assignment4"/>
-        <property name="java-output-path" value="/events-web-assignment4/build/classes"/>
+        <property name="java-output-path" value="/events-web/build/classes"/>
+        <property name="context-root" value="events-web"/>
     </wb-module>
 </project-modules>
